# presenton-ddd

./: .env.example  .gitignore  .pre-commit-config.yaml  docker-compose.dev.yml  docker-compose.yml  mypy.ini  pyproject.toml  ruff.toml
.claude/: settings.json
.claude/agents/: agent-her.md
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-04-02T21-37-14-196Z.yml  page-2026-04-02T21-37-25-618Z.yml  page-2026-04-02T21-37-37-092Z.yml  page-2026-04-02T21-37-50-298Z.yml
docs/superpowers/plans/: 2026-04-02-plan-01-shared-kernel.md  2026-04-02-plan-02-identity-auth.md  2026-04-02-plan-overview.md
domains/agent/: Dockerfile  pyproject.toml
domains/agent/api/: main.py  router.py  schemas.py
domains/agent/application/: commands.py  dto.py  queries.py
domains/agent/domain/: defaults.py  entities.py  events.py  repositories.py  services.py  value_objects.py
domains/agent/infrastructure/: __init__.py  llm_client.py  pipeline_engine.py  repositories.py  workspace.py  workspace_test.py
domains/agent/mcp/: server.py
domains/agent/prompts/: pipeline-overview.md  stage1-discovery.md  stage2-specification.md  stage3-production.md  stage4-review.md
domains/agent/tests/: conftest.py
domains/agent/tests/integration/: test_api.py
domains/agent/tests/unit/: test_commands.py  test_entities.py  test_mcp_server.py  test_services.py
domains/auth/: Dockerfile  __init__.py  pyproject.toml
domains/auth/api/: __init__.py  main.py  router.py  schemas.py
domains/auth/application/: __init__.py  commands.py  dto.py  queries.py
domains/auth/domain/: __init__.py  entities.py  events.py  repositories.py  services.py  value_objects.py
domains/auth/infrastructure/: __init__.py  connection_store.py
domains/auth/mcp/: __init__.py  server.py
domains/auth/tests/: conftest.py
domains/auth/tests/integration/: test_api.py
domains/auth/tests/unit/: test_encryption_service.py  test_mcp_server.py  test_oauth_flow.py
domains/content/: Dockerfile  __init__.py  pyproject.toml
domains/content/api/: __init__.py  main.py  router.py  (+1 more)
domains/export/: Dockerfile  pyproject.toml
domains/export/api/: dependencies.py  main.py  router.py  schemas.py
domains/export/application/: commands.py  dto.py  queries.py
domains/export/domain/: entities.py  repositories.py  services.py  value_objects.py
domains/export/mcp/: server.py
domains/export/tests/: conftest.py
domains/export/tests/integration/: test_api.py
domains/export/tests/unit/: test_commands.py  test_entities.py  test_mcp_server.py
domains/identity/: Dockerfile  pyproject.toml
domains/identity/api/: __init__.py  dependencies.py  main.py  router.py  schemas.py
domains/identity/application/: commands.py  dto.py
domains/identity/domain/: entities.py  events.py  repositories.py  services.py  value_objects.py
domains/identity/infrastructure/: __init__.py  db_models.py  repositories.py
domains/identity/mcp/: __init__.py  server.py
domains/identity/tests/: conftest.py
domains/identity/tests/integration/: test_api.py
domains/identity/tests/unit/: test_commands.py  test_entities.py  test_mcp_server.py  test_token_service.py
domains/media/: Dockerfile  pyproject.toml
domains/presentation/: Dockerfile  __init__.py  pyproject.toml
domains/presentation/api/: __init__.py  main.py  router.py  schemas.py
domains/presentation/application/: __init__.py  commands.py  dto.py  queries.py
domains/presentation/domain/: __init__.py  entities.py  events.py  repositories.py  services.py  value_objects.py
domains/presentation/mcp/: __init__.py  server.py
domains/presentation/tests/: conftest.py
domains/presentation/tests/integration/: test_api.py
domains/presentation/tests/unit/: test_commands.py  test_entities.py
domains/rendering/: Dockerfile  __init__.py  pyproject.toml
domains/style/: Dockerfile  __init__.py  pyproject.toml
domains/web_access/: Dockerfile  __init__.py  conftest.py  pyproject.toml
domains/web_access/api/: __init__.py  main.py  router.py  schemas.py
domains/web_access/application/: __init__.py  commands.py  dto.py  queries.py
domains/web_access/domain/: __init__.py  entities.py  events.py  repositories.py  services.py  value_objects.py
domains/web_access/mcp/: __init__.py  server.py
domains/web_access/tests/: __init__.py  conftest.py
domains/web_access/tests/integration/: __init__.py  test_api.py
domains/web_access/tests/unit/: __init__.py  test_commands.py  test_entities.py  test_mcp_server.py
electron/: package.json  tsconfig.json
electron/app/: main.ts  preload.ts  process_manager.ts
electron/embedded/: embedded_bus.py  embedded_db.py  launcher.py
electron/resources/: .gitkeep
electron/scripts/: setup.sh
frontend/: .env.local.example  Dockerfile  next.config.mjs  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/hooks/: useAgentPipeline.ts  useAuth.ts  useRalphLoop.ts  useWebSocket.ts
frontend/lib/: api.ts  utils.ts
frontend/store/: store.ts
frontend/types/: agent.ts  auth.ts  presentation.ts  style.ts
gateway/: Dockerfile  __init__.py  nginx.conf  proxy_params.conf  pyproject.toml
gateway/api_gateway/: __init__.py  app.py  auth_middleware.py  health.py  proxy.py  rate_limiter.py
gateway/mcp_gateway/: __init__.py  router.py  server.py
gateway/tests/: conftest.py  test_auth_middleware.py  test_health.py  test_mcp_router.py  test_rate_limiter.py
shared/: pyproject.toml
shared/shared/: __init__.py
shared/shared/domain/: __init__.py  entity.py  events.py  repository.py  value_object.py
shared/shared/infrastructure/: __init__.py  config.py  database.py  in_memory_event_bus.py  logging.py  redis_event_bus.py
shared/shared/mcp/: __init__.py  client.py  server_base.py
shared/tests/: test_config.py  test_database.py  test_entity.py  test_events.py  test_in_memory_event_bus.py  test_logging.py  test_mcp_client.py  test_mcp_server_base.py  test_redis_event_bus.py  test_value_object.py
(+129 files in other folders)
