[project]
name = "presenton-shared"
version = "0.1.0"
description = "Shared kernel for Presenton DDD domains"
requires-python = ">=3.11,<3.13"
dependencies = [
    "sqlmodel>=0.0.24",
    "structlog>=24.0.0",
    "redis>=6.0.0",
    "fastmcp>=2.11.0",
    "pydantic>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
