[project]
name = "presenton-agent"
version = "0.1.0"
description = "Agent bounded context — orchestration, subagents, Ralph Loop"
requires-python = ">=3.11,<3.13"
dependencies = ["presenton-shared", "fastapi[standard]>=0.116.0", "httpx>=0.28.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["domain", "application", "api", "mcp"]

[tool.uv.sources]
presenton-shared = { workspace = true }

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "httpx>=0.28.0"]

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-asyncio>=1.3.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [".", "../.."]
