[project]
name = "presenton-auth"
version = "0.1.0"
description = "Auth bounded context — OAuth to AI providers, encrypted token storage"
requires-python = ">=3.11,<3.13"
dependencies = [
    "presenton-shared",
    "fastapi[standard]>=0.116.0",
    "sqlmodel>=0.0.24",
    "alembic>=1.14.0",
    "cryptography>=44.0.0",
    "httpx>=0.28.0",
]

[tool.uv.sources]
presenton-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["domain", "application", "api", "mcp"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "httpx>=0.28.0"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
pythonpath = [".", "../.."]
