[project]
name = "presenton-identity"
version = "0.1.0"
description = "Identity bounded context — users, sessions, RBAC"
requires-python = ">=3.11,<3.13"
dependencies = [
    "presenton-shared",
    "fastapi[standard]>=0.116.0",
    "sqlmodel>=0.0.24",
    "alembic>=1.14.0",
    "bcrypt>=4.2.0",
    "PyJWT[crypto]>=2.9.0",
    "httpx>=0.28.0",
]

[tool.uv.sources]
presenton-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["domain", "application", "api", "mcp"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "httpx>=0.28.0"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
pythonpath = [".", "../.."]
